[gd_scene load_steps=4 format=3 uid="uid://b3hjtwqxf4jh2"]

[ext_resource type="Texture2D" uid="uid://vae2t6fj42ss" path="res://image/Almanac_IndexButton.png" id="1_oyave"]
[ext_resource type="Script" uid="uid://bb364lhq7f1bs" path="res://code/come_back.gd" id="2_j1www"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hat3w"]

[node name="come_back" type="Button"]
offset_left = -2.0
offset_top = 7.0
offset_right = 162.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 0.7137255)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxEmpty_hat3w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_hat3w")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hat3w")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hat3w")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hat3w")
text = "返回主界面"
icon = ExtResource("1_oyave")
icon_alignment = 1
script = ExtResource("2_j1www")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
